packages/react-components/src/components/modal/content/modal-content.module.css
@import '../../../core/utils/media.css';
@import '../../../core/utils/vibrancy.css';

@layer components {
  .Content {
    background-color: var(--dimmed-1);
    overscroll-behavior: contain;
    inline-size: 100vw;
    overflow: hidden;
    -webkit-overflow-scrolling: touch;
    max-block-size: 95dvh;
    border-radius: token(--radius-24) token(--radius-24) 0 0;
    justify-self: center;
    align-self: end;
    padding-bottom: env(safe-area-inset-bottom);

    @media (--from-small) {
      max-inline-size: 600px;
      max-block-size: 80dvh;
      border-radius: token(--radius-24);
      justify-self: center;
      align-self: center;
    }

    &[data-modal-content-scroll='true'] {
      overflow: auto;
    }
  }

  .Header {

    @mixin vibrancy;

    overflow: hidden;
    border-radius: token(--radius-24) token(--radius-24) 0 0;
    position: sticky;
    top: 0;
    background-color: var(--header-tint, var(--vibrancy-background-soft));
    z-index: 1;
    padding:
      token(--space-16)
      token(--space-80)
      token(--space-16)
      token(--space-24);
  }

  .CloseButton {
    position: absolute;
    top: token(--space-8);
    right: token(--space-8);
  }
}

